<?xml version="1.0"?>
<package format="2">
  <name>glwoa_rrtstar_planner</name>
  <version>0.0.0</version>
  <description>The glwoa_rrtstar_planner package</description>

  <maintainer email="ilyesorigamist@gmail.com">ilyes</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <!-- build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <!-- export dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <!-- ros test -->
  <test_depend>cmake_modules</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nav_core plugin="${prefix}/glwoa_rrtstar_planner_plugin.xml"/>
  </export>
</package>
